[package]
name = "fourwarder_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
tracing-subscriber = "0.3.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dependencies.matrix-sdk]
version = "0.4.1"
default_features = false
features = ["native-tls"]
